# kaola-DeepSeek-OCR-GUI

./: .gitignore  BUILD_WINDOWS.md  README.md  build.py  deepseek_ocr.py  deepseek_ocr_gui.py  kaola-DeepSeek-OCR-GUI.spec  nodes.py  pyproject.toml  requirements.txt  test_gui_ocr.py  test_ocr.py
.github/workflows/: build.yml  publish.yml
